public static class TagManagement
{
    // Player Animation Parameters
    public static string PLAYER_IDLE_ANIMATION_BOOL = "Idle";
    public static string PLAYET_RUN_ANIMTION_BOOL = "Run";
    public static string PLAYER_JUMP_ANIMATION_BOOL = "Jump";
    public static string PLAYER_FALL_ANIMATION_BOOL = "Fall";



}